# dsp56300

./: .gitignore  .gitmodules  CMakeLists.txt  CMakePresets.json  README.md
.github/workflows/: cmake.yml
doc/: TODO.md
source/: CMakeLists.txt  base.cmake  build_mac.sh  build_win32.bat  dsp56kEmu.sln
source/HxDplugin/: CMakeLists.txt  HxDdisassemble.cpp  HxDdisassemble.h  dllmain.cpp
source/disassemble/: CMakeLists.txt  commandline.cpp  commandline.h  disassemble.cpp
source/dsp56kBase/: CMakeLists.txt  conditionvariable.cpp  conditionvariable.h  dspassert.cpp  mmuarray.h  mmuhelper.cpp  mmuhelper.h  mutex.cpp  mutex.h  ringbuffer.h  semaphore.h  sharedaudiobuffer.h  sharedaudiobuffer_test.cpp  sharedaudioreducer.h  sharedaudioreducer_test.cpp  threadtools.cpp  trigger.cpp  trigger.h  win8sync.cpp  win8sync.h
source/dsp56kDebugger/: CMakeLists.txt  addressInfo.cpp  addressInfo.h  assembly.cpp  assembly.h  callstack.cpp  callstack.h  debugger.cpp  debugger.h  debuggerJitState.cpp  debuggerJitState.h  debuggerListener.cpp  debuggerListener.h  debuggerState.cpp  debuggerState.h  dialog.cpp  dialog.h  dspExec.cpp  dspExec.h  gotoAddress.cpp  gotoAddress.h  grid.cpp  grid.h  jitconfigeditor.cpp  jitconfigeditor.h  mainWindow.cpp  mainWindow.h  memory.cpp  memory.h  registers.cpp  registers.h  statusBar.cpp  statusBar.h  styledTextCtrl.cpp  styledTextCtrl.h  types.h
source/dsp56kEmu/: CMakeLists.txt  README  _new.cpp  _new.h  aar.h  agu.h  assembler.cpp  assembler.h  assemblertest.cpp  assemblertest.h  assert.cpp  assert.h  audio.cpp  audio.h  bitfield.h  buildconfig.h  debuggerinterface.cpp  debuggerinterface.h  device.cpp  device.h  disasm.cpp  disasm.h  dma.cpp  dma.h  dsp.cpp  dsp.h  dsp56kEmu.vcproj  dsp56kEmu.vcxproj  dsp56kEmu.vcxproj.filters  dspBootCode.cpp  dspBootCode.h  dsp_decode.inl  dsp_jumptable.inl  dsp_ops.inl  dsp_ops_alu.inl  dsp_ops_bra.inl  dsp_ops_helper.inl  dsp_ops_jmp.inl  dsp_ops_move.inl  dspassert.cpp  (+159 more)
source/dsp56kTestRunner/: CMakeLists.txt  testRunner.cpp
source/dspEmuTester/: dspEmuTester.cpp  dspEmuTester.h  dspEmuTester.rc  dspEmuTester.sln  dspEmuTester.vcproj  dspEmuTester.vcproj.vspscc  dspEmuTester.vcxproj  dspEmuTester.vcxproj.filters  dspEmuTesterDlg.cpp  dspEmuTesterDlg.h  resource.h  stdafx.cpp  stdafx.h
source/dspEmuTester/res/: dspEmuTester.rc2
source/ptypes/: LICENSE  Makefile  index.html
source/ptypes/doc/: async.examples.html  async.html  async.jobqueue.html  async.message.html  async.msgqueue.html  async.mutex.html  async.rwlock.html  async.semaphore.html  async.thread.html  async.trigger.html  async.utils.html  basic.html  changes.html  compiling.html  criterrors.html  cset.constructors.html  cset.html  cset.manipulation.html  cset.operators.html  deploying.html  htsrc.html  index.html  inet.examples.html  inet.html  inet.ipmessage.html  inet.ipmsgserver.html  inet.ipstmserver.html  inet.ipstream.html  inet.utils.html  intro.html  lists.html  lists.textmap.html  lists.tobjlist.html  lists.tpodlist.html  lists.tstrlist.html  portability.html  ref.html  ref.tmpl.html  streams.errors.html  streams.examples.html  (+31 more)
source/ptypes/doc/include/: pasync.h.html  pinet.h.html  pport.h.html  pstreams.h.html  ptime.h.html  ptypes.h.html
source/ptypes/include/: pasync.h  pinet.h  pport.h  pstreams.h  ptime.h  ptypes.h
source/ptypes/src/: Makefile.BSD_OS  Makefile.CYGWIN_NT  Makefile.Darwin  Makefile.FreeBSD  Makefile.Linux  Makefile.SunOS  Makefile.common  pasync.cxx  patomic.cxx  pcomponent.cxx  pcset.cxx  pcsetdbg.cxx  pexcept.cxx  pfatal.cxx  pfdxstm.cxx  pinfile.cxx  pinfilter.cxx  pinmem.cxx  pinstm.cxx  pintee.cxx  piobase.cxx  pipbase.cxx  pipmsg.cxx  pipmsgsv.cxx  pipstm.cxx  pipstmsv.cxx  pipsvbase.cxx  pmd5.cxx  pmem.cxx  pmsgq.cxx  pmtxtable.cxx  pnpipe.cxx  pnpserver.cxx  pobjlist.cxx  poutfile.cxx  poutfilter.cxx  poutmem.cxx  poutstm.cxx  ppipe.cxx  ppodlist.cxx  (+21 more)
source/ptypes/win32/: dll_version.rc  ptypes.dsp  ptypes.plg  ptypes.sln  ptypes.vcproj
source/ptypes/wshare/: Makefile.BSD_OS  Makefile.CYGWIN_NT  Makefile.Darwin  Makefile.FreeBSD  Makefile.Linux  Makefile.SunOS  Makefile.common  clients.cxx  clients.h  config.cxx  config.h  log.cxx  log.h  mimetable.awk  mimetable.cxx  mod_about.cxx  mod_file.cxx  mod_wstat.cxx  modules.cxx  modules.h  request.cxx  request.h  sysutils.cxx  sysutils.h  urlutils.cxx  urlutils.h  utils.cxx  utils.h  wshare.cxx
source/vtuneSdk/: CMakeLists.txt
source/vtuneSdk/include/: ittnotify.h
source/vtuneSdk/include/legacy/: ittnotify.h
source/vtuneSdk/lib32/: jitprofiling.lib  libittnotify.lib
source/vtuneSdk/lib64/: jitprofiling.lib  libittnotify.lib
source/vtuneSdk/src/ittnotify/: ittnotify_config.h  ittnotify_static.c  ittnotify_static.h
source/vtuneSdk/src/ittnotify_refcol/: README.md
tests/: CMakeLists.txt  jitunittests.cpp  test-main.cpp
