set(ASMJIT_STATIC TRUE)

option(DSP56300_DEBUGGER "Build wxWidgets based debugger" OFF)

add_subdirectory(asmjit)
add_subdirectory(dsp56kEmu)
add_subdirectory(dsp56kTestRunner)
add_subdirectory(disassemble)
if(WIN32)
	add_subdirectory(HxDplugin)
endif()

if(DSP56300_DEBUGGER)
	set(wxUSE_LIBJPEG OFF)
	set(wxUSE_LIBTIFF OFF)
	set(wxUSE_REGEX OFF)
	set(wxUSE_EXPAT OFF)
	set(wxUSE_DEBUGREPORT OFF)
	set(wxUSE_LIBLZMA OFF)
	set(wxUSE_LOG OFF)
	set(wxUSE_LOGGUI OFF)
	set(wxUSE_LOGWINDOW OFF)
	set(wxUSE_CRASHREPORT OFF)
	set(wxUSE_WEBREQUEST OFF)
	set(wxUSE_WEBREQUEST_WINHTTP OFF)
	set(wxUSE_PRINTING_ARCHITECTURE OFF)
	set(wxUSE_HELP OFF)
	set(wxUSE_MS_HTML_HELP OFF)
	set(wxUSE_HTML OFF)
	set(wxUSE_WXHTML_HELP OFF)
	set(wxUSE_WXHTML_HELP OFF)
	set(wxUSE_MEDIACTRL OFF)
	set(wxUSE_SOUND OFF)
	set(wxUSE_RICHTEXT OFF)
	set(wxUSE_POSTSCRIPT OFF)

	set(wxBUILD_SHARED OFF)
	set(wxBUILD_STRIPPED_RELEASE ON)

	add_subdirectory(wxWidgets)
	add_subdirectory(dsp56kDebugger)
endif()
